Problem is that the animation doesnt loop correctly - i will look for an answer on stack overflow

--- a/app/assets/stylesheets/components/_textscroll.scss
+++ b/app/assets/stylesheets/components/_textscroll.scss
@@ -1,17 +1,27 @@
-.ticket-wrap {
+.ticker-wrap {
   width: 100%;
-  margin: 2rem;
-  overflow: hidden;
+  padding-left: 100%;
 } 
 
 .ticker-move {
   width: 100%;
   white-space: nowrap;
+  display: inline-block;
+  padding-right: 100%;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-name: ticker;
+  animation-duration: 10s;
 }
 
 .ticket-item {
   background: #999;
   display: inline-block;
-  padding-left: 0 2rem;
-  transition: all .2s ease-out;
+  padding: 0 2rem;
+  color: black;
+}
+
+@keyframes ticker {
+  0% { transform: translate3d(0, 0, 0); }
+  100% { transform: translate3d(-100%, 0, 0); }
 }
